deploy-templates/templates/manifest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sb
  namespace: f9iioa28-expose-dev
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/instance: springboot-expose
    app.kubernetes.io/name: springboot-expose
  type: ClusterIP
